adicionando parametros para compilar o binario do go sem debug

--- a/docker/01-desafio-go/Dockerfile
+++ b/docker/01-desafio-go/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /go/src
 
 COPY ./go/src /go/src
 
-RUN go build -o /go/app/go-hello-codeeducation .
+RUN go build -ldflags "-w" -o /go/app/go-hello-codeeducation .
 
 
-FROM alpine:3.6.5
+FROM alpine:3.5
 COPY --from=build /go/app/go-hello-codeeducation /app/go-hello-codeeducation
 
 CMD ["/app/go-hello-codeeducation"]
