alterado a imagem no dockerfile do alpine para scratch

--- a/docker/01-desafio-go/Dockerfile
+++ b/docker/01-desafio-go/Dockerfile
@@ -7,7 +7,7 @@ COPY ./go/src /go/src
 RUN go build -ldflags "-w" -o /go/app/go-hello-codeeducation .
 
 
-FROM alpine:3.5
+FROM scratch
 COPY --from=build /go/app/go-hello-codeeducation /app/go-hello-codeeducation
 
 CMD ["/app/go-hello-codeeducation"]
