--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,5 +30,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: ./integracao-continua/projeto-demo/
           push: true
           tags: gihovani/fc2.0-ci-go:latest
