--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea
+.scannerwork
 node_modules
 package-lock.json
+coverage.out
 docker/02-desafio-nginx/mysql
-docker/02-desafio-nginx/node/package-lock.json
-docker/02-desafio-nginx/node/node_modules
