--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,9 @@
-sonar.projectKey=go-project
+sonar.projectKey=gihovani_curso-full-cycle2
+sonar.organization=gihovani
 
-sonar.sources=.
+sonar.sources=./integracao-continua/projeto-demo/
 sonar.exclusions=**/*_test.go,Dockerfile
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.host.url=http://kubernetes.docker.internal:9000
-sonar.login=ca94a52a40599ffe332dd7cb2aa0992bb01676e1
-sonar.go.coverage.reportPaths=coverage.out
+sonar.go.coverage.reportPaths=./integracao-continua/projeto-demo/coverage.out
